[package]
name = "virtualterminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "virtualterminal"
path = "src/lib.rs"

[dependencies.windows]
version = "0.48.0"

features = [
    "Win32_System_Console",
    "Win32_Foundation",
]
